 - Set middle click to submit in a new TAB. (Helps to keep form data!)
 - Added support for the Q element. BUG#343
 - Cleaned up Html_pop_tag().
 - Ported the command line interface from dillo1 (XID not working yet).
 - Switched file dpi error messages to HTML.
 - Added a popup menu to form's submit button.
 - Added a right-click menu to the form submit button (allows to show hiddens).
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
 - Fixed incorrect use of VOIDP2INT in Dialog_user_password_cb().
 - Ensure that the dlib dStr* functions are used everywhere.
   Patches: Jeremy Henty
+- Implemented Basic authentication!
   Patch: Jeremy Henty, Jorge Arellano Cid
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich
+- Made the DNS resolver report in numeric address notation.
   Patch: Justus Winter
+- Reduced warnings with gcc-4.3.
   Patch: Thomas Orgis
+- Made the parser recognize "[^ ]/>"-terminated XML elements.
   Patch: Johannes Hofmann
+- Added the "middle_click_drags_page" dillorc option.
   Patch: Jorge Arellano Cid, Thomas Orgis
+- Set the File menu label to hide when the File menu-button is shown.
 ? Trying a new iconv() test in configure.in.
 - Allowed the rc parser to skip whitespace around the equal sign.
 - Fixed the parser not to call Html_tag_close_* functions twice.
!- Started code cleanup of the image code mainly in dicache.c.
   Patches: Jorge Arellano Cid

dw

+- Moved clicked from ButtonResource to Resource.
   Patch: place (AKA corvid)
+- Cleaned up unused code in fltkviewbase.
   Patch: Johannes Hofmann

-----------------------------------------------------------------------------

dillo-2.0
